@startuml

title __VIEW's Class Diagram__\n

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DefaultTouchListener {
          {static} - STATE_DRAGGING : int
          {static} - STATE_IDLE : int
          {static} - STATE_MULTIFINGERS_DRAGGING : int
          {static} - STATE_MULTIFINGERS_SHAKING : int
          {static} - STATE_SCALING : int
          {static} - STATE_SCALING_AND_MULTIFINGERS_DRAGGING : int
          {static} - STATE_SHAKING : int
          - gestureDetector : GestureDetector
          - lastMultiFingersFocusPoint : PointF
          - lastPoint : PointF
          - scaleGestureDetector : ScaleGestureDetector
          - state : int
          + DefaultTouchListener()
          + onTouch()
          + setOnEventListener()
          - distance()
          - isShakingTolerable()
          - isTolerable()
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      interface com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.IOnEventListener {
          + onDown()
          + onDrag()
          + onDragBegin()
          + onDragEnd()
          + onLastPointerLeft()
          + onLongPress()
          + onMultiFingerDrag()
          + onMultiFingerDragBegin()
          + onMultiFingerDragEnd()
          + onScale()
          + onScaleBegin()
          + onScaleEnd()
          + onSecondPointerDown()
          + onSingleTap()
          + onUp()
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyOnGestureListener {
          + onDown()
          + onLongPress()
          + onSingleTapConfirmed()
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyScaleGestureListener {
          - lastScaleFactor : float
          - scaleFactor : float
          + onScale()
          + onScaleBegin()
          + onScaleEnd()
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DensityHelper {
          {static} + dpToPx()
          {static} + dpToPx()
          {static} + pxToDp()
          {static} + pxToDp()
          {static} + pxToSp()
          {static} + pxToSp()
          {static} + spToPx()
          {static} + spToPx()
      }
    }
  }
  

  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener .up.|> android.view.View.OnTouchListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener o-- com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.IOnEventListener : onEventListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener +-down- com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.IOnEventListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener +-down- com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyOnGestureListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener +-down- com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyScaleGestureListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyOnGestureListener -up-|> android.view.GestureDetector.SimpleOnGestureListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.MyScaleGestureListener -up-|> android.view.ScaleGestureDetector.SimpleOnScaleGestureListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
